Harden concurrent package across six audit dimensions
Fix 14 issues found in structured concurrency scope review:
- H1/H2: close() now guarantees executor shutdown in finally with awaitTermination
- H3: closeTimeout must be positive (rejects Duration.ZERO)
- M3: save/clear interrupt flag before waitForTermination in close()
- M4/L2: replace CopyOnWriteArrayList with ArrayList + unmodifiableList
- M5: eliminate per-iteration List.copyOf in joinInternal loop
- M6: add diagnostic log to dead ExecutionException catch
- M7: document fork() closure capture warning
- L1: document failure() vs exception() semantic difference
- L3: abort delegate execution when markRunning() fails
- L4: register Cleaner to warn about unclosed scopes